// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Order Happy Path 200 - Order created successfully using pay now method (iDEAL) 1`] = `
Object {
  "action": "addInterfaceInteraction",
  "fields": Object {
    "actionType": "createOrder",
    "createdAt": "2021-12-20T10:15:15+00:00",
    "id": "b2bd1698-9923-4704-9729-02db2de495d1",
    "request": "{\\"transactionId\\":\\"2b5f68ad-ae94-4bf1-ae41-7096e5142f89\\",\\"createPayment\\":{}}",
    "response": "{\\"mollieOrderId\\":\\"ord_8xnw8a\\",\\"checkoutUrl\\":\\"https://www.mollie.com/checkout/order/8xnw8a\\",\\"transactionId\\":\\"2b5f68ad-ae94-4bf1-ae41-7096e5142f89\\"}",
  },
  "type": Object {
    "key": "ct-mollie-integration-interface-interaction-type",
  },
}
`;

exports[`Create Order Happy Path 200 - Order created successfully using pay now method (iDEAL) 2`] = `
Object {
  "action": "setStatusInterfaceText",
  "interfaceText": "created",
}
`;

exports[`Create Order Happy Path 200 - Order created successfully using pay now method (iDEAL) 3`] = `
Object {
  "action": "setKey",
  "key": "ord_8xnw8a",
}
`;

exports[`Create Order Happy Path 200 - Order created successfully using pay now method (iDEAL) 4`] = `
Object {
  "action": "changeTransactionState",
  "state": "Pending",
  "transactionId": "2b5f68ad-ae94-4bf1-ae41-7096e5142f89",
}
`;

exports[`Create Order Happy Path 200 - Order created successfully using pay now method (iDEAL) 5`] = `
Object {
  "action": "changeTransactionInteractionId",
  "interactionId": "tr_J5R48EP58J",
  "transactionId": "2b5f68ad-ae94-4bf1-ae41-7096e5142f89",
}
`;

exports[`Create Order Happy Path 200 - Order created successfully using pay now method (iDEAL) 6`] = `
Object {
  "action": "changeTransactionTimestamp",
  "timestamp": "2021-12-20T10:15:15+00:00",
  "transactionId": "2b5f68ad-ae94-4bf1-ae41-7096e5142f89",
}
`;

exports[`Create Order Happy Path Authorization works 1`] = `
Object {
  "action": "addInterfaceInteraction",
  "fields": Object {
    "actionType": "createOrder",
    "createdAt": "2021-12-20T11:17:23+00:00",
    "id": "b2bd1698-9923-4704-9729-02db2de495d1",
    "request": "{\\"transactionId\\":\\"2b5f68ad-ae94-4bf1-ae41-7096e5142f89\\",\\"createPayment\\":{}}",
    "response": "{\\"mollieOrderId\\":\\"ord_l2idwq\\",\\"checkoutUrl\\":\\"https://www.mollie.com/checkout/order/l2idwq\\",\\"transactionId\\":\\"2b5f68ad-ae94-4bf1-ae41-7096e5142f89\\"}",
  },
  "type": Object {
    "key": "ct-mollie-integration-interface-interaction-type",
  },
}
`;

exports[`Create Order Happy Path Authorization works 2`] = `
Object {
  "action": "setStatusInterfaceText",
  "interfaceText": "created",
}
`;

exports[`Create Order Happy Path Authorization works 3`] = `
Object {
  "action": "setKey",
  "key": "ord_l2idwq",
}
`;

exports[`Create Order Happy Path Authorization works 4`] = `
Object {
  "action": "changeTransactionState",
  "state": "Pending",
  "transactionId": "2b5f68ad-ae94-4bf1-ae41-7096e5142f89",
}
`;

exports[`Create Order Happy Path Authorization works 5`] = `
Object {
  "action": "changeTransactionInteractionId",
  "interactionId": "tr_FCc42uPfJx",
  "transactionId": "2b5f68ad-ae94-4bf1-ae41-7096e5142f89",
}
`;

exports[`Create Order Happy Path Authorization works 6`] = `
Object {
  "action": "changeTransactionTimestamp",
  "timestamp": "2021-12-20T11:17:23+00:00",
  "transactionId": "2b5f68ad-ae94-4bf1-ae41-7096e5142f89",
}
`;
